--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="val.js"></script>
 </head>
 <body>
     <h1>welcome students</h1>
+    <button onclick="msg()"></button>
 </body>
 </html>
